# ChangeLog for dev-perl/Test-Requires
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Requires/ChangeLog,v 1.28 2014/08/20 18:08:04 axs Exp $

*Test-Requires-0.60.0-r1 (20 Aug 2014)

  20 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +Test-Requires-0.60.0-r1.ebuild, -Test-Requires-0.60.0.ebuild:
  bumped EAPI to 5; committed directly to stable as no other changes present and
  revbump helps stable systems to keep from dieing on perl-5.18 upgrade

  01 Feb 2014; Mike Frysinger <vapier@gentoo.org> Test-Requires-0.60.0.ebuild:
  Add arm64/m68k love.

  05 Jan 2014; Markos Chandras <hwoarang@gentoo.org>
  Test-Requires-0.60.0.ebuild:
  Add ~mips

  08 Jul 2013; Vicente Olivert Riera <vincent@gentoo.org>
  Test-Requires-0.60.0.ebuild:
  ppc64 stable. bug #449576

  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> Test-Requires-0.60.0.ebuild:
  Add ~ppc64, wrt bug #442188

  09 Sep 2012; Raúl Porcel <armin76@gentoo.org> Test-Requires-0.60.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #418803

  05 Aug 2012; Markus Meier <maekke@gentoo.org> Test-Requires-0.60.0.ebuild:
  arm stable, bug #418803

  02 Aug 2012; Jeroen Roovers <jer@gentoo.org> Test-Requires-0.60.0.ebuild:
  Stable for HPPA (bug #418803).

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  01 Apr 2012; Raúl Porcel <armin76@gentoo.org> Test-Requires-0.60.0.ebuild:
  Add ~ia64/~s390/~sh/~sparc wrt #403413

  31 Mar 2012; Torsten Veller <tove@gentoo.org> -Test-Requires-0.05.ebuild:
  Cleanup

  24 Mar 2012; Fabian Groffen <grobian@gentoo.org> Test-Requires-0.60.0.ebuild:
  Add Prefix keywords, bug #403413

  09 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  Test-Requires-0.60.0.ebuild:
  x86 stable wrt bug #400237

  27 Feb 2012; Brent Baude <ranger@gentoo.org> Test-Requires-0.60.0.ebuild:
  Marking Test-Requires-0.60.0 ppc for bug 400237
