@@ -2,13 +2,17 @@
 Hash: SHA256
 
 DIST Test-Requires-0.06.tar.gz 20077 SHA256 9b6f9e4c0b6f0ebe1d761b94938ec1446589c9a91920a98553aef47f2d795ecf SHA512 cd326cca098feb2d395f3eeaa4af2e624ae7795a97477374fd892f133093fd00fc312b295e07f648e2f0411f2a0522b386a2b8df2dda1ee0660c2fef28f510f6 WHIRLPOOL 3fcc9949b454b3cf26d585621398bf846942cf80b2b2078cce10cc2197ff290f9bc467751d4cc725d717d5d43dd0c0a18fa73b5779e1aa46675e3c8ebf9e31f9
+DIST Test-Requires-0.08.tar.gz 10888 SHA256 e7b1b4b30b90d530aea68205c0e65cf7a784d6a218df5a2b41830cdb404d8221 SHA512 ddb0072ed4f35019b9d1122742f272d9f00589fafeadf3ad0758a962ba5e819fc3e15cb01e1a0ed1c03aee42c18b7ef1377a45683519bf6d63b1b31e3384b9d0 WHIRLPOOL e99023a914f9ca4df25aad8f26b3c5297f57ee80503d1c360c5c255baf1006ef6d50963c28a3bf5b17aafa9791a5ec1dcbb1d728b11af8ed40a5b0185adb6223
 EBUILD Test-Requires-0.60.0-r1.ebuild 631 SHA256 5bd32f2e0b2d4414d4ed56633d22ceba95020c817f303ba62312419cd97596ff SHA512 e66aefc9ff9786157665a2d05fc7b107d987e967a722243abc84887d347bed45b54358b67e7b98914878090ad0feafc47853ab865a19db0e2157e4b79882d991 WHIRLPOOL b5b19546ee02dda4bb3f332f1ed8167b649b7692d5c894dca4184b2da139597bbe6ca3bf9d165e2e2aae0b94784589d378ec6c5240433431d4a7e2c6ce2a1696
-MISC ChangeLog 3775 SHA256 555e001d4e3c992d7e58fd10e60e9aba9f1cf2accf2e151e5d358665246c2105 SHA512 6b2230af3e45ae0ac6d799c9f74842e8d8a7de7f728d677504ae9e49bc2de0b3b69e96c4d5c42e6042dab4ebdde119949c98fc7292e8b642274fe8fa7edb6c0e WHIRLPOOL daa046aff0be8f73fe766963fd9a1bf0864afdb4e0d121dedbc901f83932a9ecae8eadc6ea9a351e5d1b8a89bffcc8b0d7cda2adbb438c8a0e53b81118b71c45
+EBUILD Test-Requires-0.80.0.ebuild 690 SHA256 1c8e81b5f114ce775a427e36189767315627eebe052e606879818348fc70b0de SHA512 6217134866e4d4fb17faef385b670a63a461176264d92ba4da5421c3358c80e15e9c6a83bb2a2257d416ca58f4d979124668fb34da75f260bb5ed30359a3c47c WHIRLPOOL a23cb0fadfb9eafc1b8266c0bd82cbdb2375fc5928d2304469dd8e6e11e33b97a1647eae339f6684eed6a51f29099b16f28502f0f6bcc8a5ff9b4727f7f166ba
+MISC ChangeLog 3912 SHA256 4ded0d38c8688556d7095a3a7d31d883ab853e8fbbaebef9921fda7265c1355b SHA512 779622ffa9cc1580ad3203b405bbe7290f320fbd4e65bd3c56a29036ea9933e4fe30b898f71c7bb10c261c8eaa3404fe921b0304ab7ca1bfb7ee3e4716efb425 WHIRLPOOL 3089f51f36728bfad1417dac2de825d2e0ea64eedd3b00a426c4d4c779984d21c0c10154559091aac3077518137cec4fc37d69c3140029d2cb243b8c9fc01707
 MISC metadata.xml 300 SHA256 3242fb84b1fae361d6e8c4bb0b926f51082fc41dcb698429ced3e0c8a10ae3b3 SHA512 b808d7579fa94d43767b24641eb038aba16bef296ebdb07192e5a3c4849b1d3bcaa5eb1c912a053223e66ba8a80f5bfc841c33df289bf4ae175542da7f927986 WHIRLPOOL 057c4d7f2bb551bfe33287ee3c114ee57799ab697ee918d6cab2fa6727a0f80581cbede911ee976500d9d4a54e6c0b6abc1c66b1577d00c2218a5b2147f24e37
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlP05AIACgkQ2ugaI38ACPAmHAD9HSDDllRJYuzhMhfXDz6UFhbB
-uqQ+qpsx+OTRxt2faIAA/R7w/z0wnbZ8XgRPXJJG5MFoT1uDzmmfw+csp4b8xdUE
-=MCd7
+iJwEAQEIAAYFAlRBfTAACgkQG9wOWsQutdZoFQQAlfrj1ZyC7FeQs8O7WJHtQNDK
+kE0hmrp80UGOA9WPTkb9aqNtmBMLzTM16peZUpf4kQnFQDWyMgfEqCZA0TVuKi8H
+f0X7Hrrx3pZFB94QFF+HE1IEtFDsxYV7HGNd1C0pGryVNENNrrZk2XUnDeEBxoPA
+e8l14dxIlUwKMmFDDA8=
+=CTi6
 -----END PGP SIGNATURE-----
