@@ -1,0 +1,22 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Requires/Test-Requires-0.80.0.ebuild,v 1.1 2014/10/17 20:35:07 zlogene Exp $
+
+EAPI=5
+
+MODULE_AUTHOR=TOKUHIROM
+MODULE_VERSION=0.08
+inherit perl-module
+
+DESCRIPTION="Checks to see if the module can be loaded"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x86-solaris"
+IUSE=""
+
+RDEPEND=">=virtual/perl-Test-Simple-0.61
+	 >=virtual/perl-ExtUtils-MakeMaker-6.640.0"
+
+DEPEND="${RDEPEND}"
+
+SRC_TEST=do
