@@ -1,9 +1,0 @@
-DEFINED_PHASES=compile install unpack
-DESCRIPTION=simple & stable nscd replacement
-HOMEPAGE=http://busybox.net/~vda/unscd/README
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2
-SLOT=0
-SRC_URI=http://busybox.net/~vda/unscd/nscd-0.48.c
-_eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	6ce35cb0d56d962486c858d41604c820
-_md5_=57c8e81cf1faf4f13a936b5a124c7aee
