@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install unpack
-DEPEND=sys-libs/glibc[nscd(+)]
-DESCRIPTION=simple & stable nscd replacement
-EAPI=4
-HOMEPAGE=http://busybox.net/~vda/unscd/README
-KEYWORDS=amd64 x86
-LICENSE=GPL-2
-RDEPEND=sys-libs/glibc[nscd(+)]
-SLOT=0
-SRC_URI=http://busybox.net/~vda/unscd/nscd-0.49.c
-_eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	6ce35cb0d56d962486c858d41604c820
-_md5_=9d22a833b5b5d8fe699d6c5e59b18666
