@@ -1,41 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX unscd.initd 1080 SHA256 fd19366537dc42cda28c1f1ee97842c27286580c66248127111f7946386dfaed SHA512 125f38f9cbc0757da48db3b2352fbede219a5cab1db7abd52d6bce4203757f2fc28a776689c5d34bbcbe6a7febcfd08baea90d54e9face733fc5c5284621a149 WHIRLPOOL 140ef1d87bf95722bd8b1742e18d43ad5fdbb6c2b9e68e75c48ca37fab88f1c50a6c9fb07dcd9f5c2140e47286a7854aa6d8a5b970bbd2234649d34fea0b9f09
 AUX unscd.initd-r1 428 SHA256 d574b737925b703178141e485a63bdbd0ee9850e18e0ce26138634724a4ee29a SHA512 bf46c91e163c33540f753eabc55a8a8c4e973e38bf1db6f5334b2105cc2d8a36bdbdf36b81daad1194930d9e9c76390b696055599438da377b8a05c3701a34fd WHIRLPOOL 221d651a015928d8f5d8e9abee0179cb5184327bf516ce2835a0e667d48c532d8834731cefbec5dd46b22229ec62b2689272d540b37710fa72b8e4ae1a16e54e
-DIST nscd-0.39.c 62982 SHA256 23cf1026db790396a748e5263584727a61254607b0640d04bd91d416fe8d1e3f
-DIST nscd-0.45.c 69844 SHA256 9f2b990fbe12cac2f0ad77f1847766e9c5f976a2181763b2d644e8ca96eb3489 SHA512 8e9e9776f580efe341c63d65084560b5857a2fcbbb3a10d781ae74c5a51570bc0169a2bc64b20fcb640ab01bb9a71a0fc8508429ce179e0282f76f99c5a0069f WHIRLPOOL be405600a846eb30917fd9dffc36089d13a945abdc49cf71a7e8d38976c11dc8a0b080f9db572658f1093f6b073f50ffe7b54dd46f257119315f57872eac47ed
-DIST nscd-0.47.c 70572 SHA256 b96d6b5d1fb894a4a23c382ddc5c1e807bc45ad984053516fdd3c389fed4c5e7 SHA512 16615eaf311d2ce2c0b79eccd1396d34a3cab4986faba03142190dde5e7a9862b4a29cd1780195d99d8e7cc48dab1ba474288b464606bf1b9584b80f55e8c703 WHIRLPOOL 7df1ceb81e269ea1893b1971128dd866f3755667d7818381b402ff0b9dd1c211f17dc0d07bebda58382469ffc31837d1de2b478c1e3742e8ec78144a502fa7f4
-DIST nscd-0.48.c 71120 SHA256 e3d8d69ea797e719f9d546190bc5517530cb14cc7d09c9ce9e438979f4818e86 SHA512 edf96bf206382a1c87a8d23053bfce13e1ec1fee0b2daed4a71180b099a0b225810b03913a4f273303fb8b9ed727f88d05412531031e918dc48acc39198a030b WHIRLPOOL 17ca37b9501c98826d9c39fd55b7fb89b5117dfeeb16034417ddfd89a7be5ed2122c542cd3d4d8832a682d44481e846f8a60b25cc06452fdf9786d6661e14340
-DIST nscd-0.49.c 71371 SHA256 a7bef9d799a15239a00fd58dd627c5ff2cb245fc4a798b3453d08ff6a730c134 SHA512 e2219206bbb783ec04613ff0c43c321d8573bd080ad05b38fdc66896ae80d7152f88acc33757d57753c3a55d974d1af858a0d4d9e24b3bbd9bbcf7539e7e8381 WHIRLPOOL 4c7ad666249af1e0caf6d4c7111985bf48269c8919aa5f2dba19fea052894d83eb7ab910cad3fc708e74805abd9a45f6a6722e6e2b3f67ead574c6ac0040caef
 DIST nscd-0.51.c 73007 SHA256 c915df72749c3fa89baa81291f40bd529512d28d484a75bcb9f8de053f9884ff SHA512 e506eca97f430191507bf41e7c9a696354bfaf14eb754467d007273931e47cef323f1ddbeffb48579c9a9a393a0256bd925576f3c88f9596879dd376b67c95fb WHIRLPOOL 9006c68a1154cd76e85b7177dd5cca301dfd3e95654f9cc6beb1a6ca4623c097b12163a135462355363bf72ef973478590380e2631b2340aed827c955ec34ac8
 DIST nscd-0.52.c 73144 SHA256 4c1f83dcd120469fceef749050cb29fa666fa4666bd308dfe92e933a4c200d55 SHA512 ba48410309fced9b8d9f929c52b39ca9a8caaf451fe73742bde7d4a4ab9980bc0f353551e19c846e96d6cb8a71e3c5edc7ddddf76cce0613282f0d01fde0612f WHIRLPOOL d98e305ee99da16e50dc379991fa3083f9608cb4ae9fbd50f03f50c0ae3d2eae8dc352fdc7fa690e47b36edd7b9c8c7cb029bd69c579d07310481b742634f0cd
-EBUILD unscd-0.39.ebuild 623 SHA256 521dbe3f749fb940fb7b7436ed695ffbf9ac9c2e6e71698145ab93a3bff48716 SHA512 d4dc086152dfa47217c7edd0b1831640c3da649f08c55ad632f6f978174813d31fb8448dfa4cb70e54c2dc0f1ad4955fb635e330d15200dfe11b4ec38d9e7133 WHIRLPOOL d352222eb7b5c72a8feb1e72143b5fa92a061ef76f8fe61ba85e1346919d43c9d5b20d27027cdf56a523f42ee4fb441f62961eae552d566743776e4e3ab1c75d
-EBUILD unscd-0.45.ebuild 664 SHA256 1aec145e14827d640c612fc9e1d2abff5bee3320728c0a99d30e36564dc1dd13 SHA512 3842b484cddc2c10ac9a759c85a4db28442e71a95a48e2316c1f7654d0c6be3045be5e7502e453cf3d54dc489cfa7a3f4315abd0f2c5340cf886f2a2eff89d7c WHIRLPOOL 1863ec10c661f9a0e3e4875f603a902c9a0653bdafc8ab59913646d06cf5e68d7ca214473a3ccf262da96b857f4fec84b30e161394ef57de3e2f8109bb1eb9ad
-EBUILD unscd-0.47.ebuild 664 SHA256 f4584b498aea853e9a6c453e792123aaafea78ea6a52a06836382d1743acde93 SHA512 471276c9b058c89008d62811628835580e7de39ce74d6f4c04173be024accd1b326b7c32f3bd4938ba5c2fc22169d2738c41018c4b91a3dfe0389fe45d896a53 WHIRLPOOL 13c4aa8ec5c001b5585636485fa4215690b61d6aae8733937b0ee981743e155e2da14e72ec9626270f45fb23ccf2b1cdd217a238203eaec11e8f401ffc0bf5dc
-EBUILD unscd-0.48.ebuild 664 SHA256 f78aa7ccda16a9f0456b3942b1793ceb0412d551c78ea06d1fb1d5fcb4f53140 SHA512 2b17fa4aa42e0a583d5d0047975f5d3c059aa438505b07d8eb282bbbee7830183215b97d42d411df6fc203857eff86a28b01edac0e2f9addd3d7c5bc99ddc4dd WHIRLPOOL 717ae06ff6aeaa8e8c94be3020cc44d34a8301609119284bc496f60e92fb25d6eb1b71b1fa1d2d23697860a961b5dd1bf7255a698b8bdcb0558c84e1156ff808
-EBUILD unscd-0.49.ebuild 706 SHA256 e50eabbceb89bdbb20eb475c8c7e365b7c392b1b78c67c7d297d52821ab72f58 SHA512 49813535a66c71471117a6f236421d6d12a6e35246dfd310f019392f24db0b75ad009f4c8496a3892b31767072f8c5dab6991a476355f36fe4ec5979e045e00f WHIRLPOOL 1fe92acb7b4df0f0a25c13633df907a23b59184ef8e9599f9ef3d0b4914337fc61d6480baf3c82b5924fa630117cd1e9d40f2554a4fd70d3589c8dc86231b66b
 EBUILD unscd-0.51.ebuild 703 SHA256 cf70766de4d598f6d4c64ce4401061f3af28aa87360a97d79cde345e24044e48 SHA512 f5765b7922cd97be85c9593b18a77adafcbbb5fe39256c69629d9ed90749d55045af0be50e918ef4a4f770174a6f3ab183ba5648824ac40118951ed201ea0705 WHIRLPOOL 4886b0d02587ee20f2c191e21762e7f78d26107b5005b732efdb30c96f5ab8af4f2333f04da6db3deddd1af0730a5a0bfa90a7775dfd48684251f5a1232a49d8
 EBUILD unscd-0.52-r1.ebuild 710 SHA256 8fa432a8448a58a9c34edec030274630766df056e14c5ff25b61c3ee6f8989f0 SHA512 b86a3eae5c59fe090ad3b3f6f68545fc1b5354f1721271f6f4a40aa1c3a1354b0ebaabc4a66a6233cae719364aae285793e9f2a8dfc846b3e1828d72244a4e92 WHIRLPOOL c59aef9818145cdc1e6b6f80664c5530f436d264f62d1f2a3553cbec348b60f94dfdeb5c7eabadf58188b5a3c202b99e2f228cf8a9d0bf6d2966cee86e14b7ec
-EBUILD unscd-0.52.ebuild 711 SHA256 d8f6d5a6e09912589b06a958a1c16a5202eaf9d6ddbe392e56be3c0f77e51ef7 SHA512 34f82e65b9418bae7b3a1feb5cde6e01fed3e69bcef7df9f500fca7a69ad317da8ac0ffba5abb04771b247dca180cbbb45e48075d6a2ea6b822b0dd044a82541 WHIRLPOOL 928c61a067f94a2ed82fed31923315a8fa1e7978d903f30ba3dbda12e5bf196ac27cf0de1787c642606a0c57e7fbe9a5c24b500d6120ee372755153922357fef
-MISC ChangeLog 2512 SHA256 f396a6f45199dc3d871339b69cd1dc258540f4c2baceca18842df9abfbc0808d SHA512 4159b0de743be67b54e0d13fa587ca10696183f8a6f9f8317b63354bcb2c4ea452d17c43297be203f22382d9b575c69ae748aaba852f24b18c357f11520dadaf WHIRLPOOL 3c6e77e5eb86f171cd5dbb619e2f3f6552305125beaa98bf49153b15e0a9289da732d102634eacd85fa8cb5b9f678859f47b04592e91f24e4a8c847184a42141
+MISC ChangeLog 2705 SHA256 2e566369b1b054312a7bee6cd037d5530caf55d4f567b7fdca1a10fbe52f2dcb SHA512 07974ea2259bafffc7d716deb03f49277930f5ef59420c51c7d88c40636045c2a37d1062b96045f331ac295fe32cfc914fd5686df103e1ed8f3e61a540d8efb5 WHIRLPOOL 6a004a8a1dc076301fe8d5a2b4db5fd02c0da99a9047ae71f1f5aa45b2489e7261792f345d0cc52f49d8e2e4c330f12be3a561bc04ad8240014e4543667dc6b9
 MISC metadata.xml 164 SHA256 e4a021cb64d124c73ee6e1a1b0771073ec203dbb505ab882fbb0ae332fc53b1f SHA512 415afe53c0f0b296094f56332b6a02bf649d016946c344f093d846a442131b6a12c28206a507b6f154d9413a478276089a013071d73a65b225a93ad439313277 WHIRLPOOL 61f09e0447db4b54e09132f8aaace886820904d96e9352ab36181654f94783345417e3539f2c31bf5c19b20da693e0dc96ffe6ffef98ef24725c6e2fad63842c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJUNpEOXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirX38P/1n7lQ2xDf4QSyINa/WuT4CF
-No0mpOMNNU/uX/5SgL6Rs7j8VUzt1ScFj2Rpu6IgN5D6gf7RpOsuVzgRrJQU0Pw7
-eEapbO81w+Aq5o72iWlya2IR+pzUTVTVijA0YfNhT6u/wLREq0k1AVp6JY6kZCuZ
-QC7AVGvTwZush+LlEVnh8nTNp/m9iJzI2Ny3IjBJl7Wmc9SMXt/cfY/otBIX/71G
-VS1pYRg6bWXVWt4w7zxZKhUMDZNH9VC9Y0hg9K0y+5Fsk+z1IQBagnpegOZ5GwAp
-f6jc2poVAsTQtqeOVHn6ppoXzS0HqO4rjeGVxBf77J9MHFzhyPvpitywm04QZA3h
-CIxHq/3y0UnTUf1r4f99X9PA26CKvyMy1u8511za7rQfKh2dkq2NAaQ41cdGm+hZ
-7ee2fXysSxli1aoKwPIfXmpHOOutHuNdU/ptbYr2WZUGoXUpd7o0W7ERrYn1RYCA
-p7VqQTTVcENLHMrXFbgZAKNg32EuZa0w4jBFMIP4vr9hOnFZq2MMFX0MmNkfaRVz
-9L7Rp+RHu/tmx68v+Dfou3/mAXaM9gATNOHbMooGuFsTwSF+P9LkYG8Bmo5Asz1D
-0EF6cwkPX0zVOvZQ5Mv3/S1Nl0KN6a6/w+/yhI48zlNMHVzYip8QcugdcL+Fzr4u
-TKuRA2SSguGBRc28tg8q
-=bg8S
+iQEcBAEBCAAGBQJUQYFqAAoJEEqz6FtPBkyjN1sH/i8POWazOzWvQVINDut1+so9
+CXwbO5WsZfE569fVbHMe5an0qfSFr/bzsc7edz1jHXATKIGCI3mkVs6+d2i801I9
+KuqiJDsUrScB8gDFzouoNOL2FGwT7P7csFOp3cqIy2MaVsANigozQdh0oVXgLD2X
+/x0lcI3MUaLQ+DGI0ubJvHF4OHDJrb77LiHSqZKdshsMmUgPbUqhzDx5pj546PT5
+0yl5+i6QzZWFYLVpPKTlugWOCM2vnNYf37wKaKoBV3fTluM2gUtOM8phbU0vPZSm
+etTSlXcqhKPgqZVeB1r4Ok4pfq3kzeCu87xgV5OZRxxGDHYu+Z5vTyekFdgI9zE=
+=3vbG
 -----END PGP SIGNATURE-----
