@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Test-Requires
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Requires/ChangeLog,v 1.28 2014/08/20 18:08:04 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Requires/ChangeLog,v 1.29 2014/10/17 20:35:07 zlogene Exp $
+
+*Test-Requires-0.80.0 (17 Oct 2014)
+
+  17 Oct 2014; Mikle Kolyada <zlogene@gentoo.org> +Test-Requires-0.80.0.ebuild:
+  Version bump
 
 *Test-Requires-0.60.0-r1 (20 Aug 2014)
 
